Commit Project Item Change

--- a/index.html
+++ b/index.html
@@ -31,21 +31,28 @@
             <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
             <h3>Movie Genre Prediction</h3>
             <p>It's a webpage that can predict the genre of a movie based on the plot text. Utilize php and html for the web and python for the natural language processing part. </p>
-            <a class = "btn" href="https://github.com/fafadlian/Movie-Genre" target="_blank">View project / case study</a>
+            <a class = "btn" href="https://github.com/fafadlian/Movie-Genre" target="_blank">View Project</a>
           </section>
           <!-- End of Project block. -->
           <section class="project-item">
             <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
-            <h3>6DOF Arm Robot Simulation</h3>
-            <p>It's a webpage that can predict the genre of a movie based on the plot text. Utilize php and html for the web and python for the natural language processing part. </p>
-            <a class = "btn" href="https://www.youtube.com/watch?v=A7kH75Uuzs8" target="_blank">View project / case study</a>
+            <h3>MyArm, 3DOF Arm Robot Project</h3>
+            <p>My Internship project while in National Instruments. Affordable, Student Oriented, Easy to Build and Develop. <br> Utilize modified MeArm arm robot structure, myRIO FPGA by National Instruments as main controller, and LabVIEW for main program and GUI</p>
+            <a class = "btn" href="https://www.youtube.com/watch?v=A7kH75Uuzs8" target="_blank">View Youtube Video</a>
           </section>
           <!-- End of Project block. -->
           <section class="project-item">
             <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
             <h3>Self Leveling/Balancing Robot</h3>
-            <p>It's a webpage that can predict the genre of a movie based on the plot text. Utilize php and html for the web and python for the natural language processing part. </p>
-            <a class = "btn" href="https://github.com/fafadlian/Movie-Genre" target="_blank">View project / case study</a>
+            <p>Mechatronics Project. A rover that will autamatically balance its roll and pitch axis</p>
+            <a class = "btn" href="#" target="_blank">View project</a>
+          </section>
+          <!-- End of Project block. -->
+          <section class="project-item">
+            <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
+            <h3>6DOF Arm Robot Simulation</h3>
+            <p>Robotics Project. 6DOF Arm Robot simulator that has three features, Joint Space, Task Space and Manual Control</p>
+            <a class = "btn" href="https://github.com/fafadlian/6DOFSimulation" target="_blank">View project</a>
           </section>
           <!-- End of Project block. -->
         </div>
