--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
-            <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
+            <img src="images/denise-jans-Lq6rcifGjOU-unsplash.jpg" alt="description of image">
             <h3>Movie Genre Prediction</h3>
             <p>It's a webpage that can predict the genre of a movie based on the plot text. Utilize php and html for the web and python for the natural language processing part. </p>
             <a class = "btn" href="https://github.com/fafadlian/Movie-Genre" target="_blank">View Project</a>
           </section>
           <!-- End of Project block. -->
           <section class="project-item">
-            <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
+            <img src="images/franck-v-U3sOwViXhkY-unsplash.jpg" alt="description of image">
             <h3>MyArm, 3DOF Arm Robot Project</h3>
             <p>My Internship project while in National Instruments. Affordable, Student Oriented, Easy to Build and Develop. <br> Utilize modified MeArm arm robot structure, myRIO FPGA by National Instruments as main controller, and LabVIEW for main program and GUI</p>
             <a class = "btn" href="https://www.youtube.com/watch?v=A7kH75Uuzs8" target="_blank">View Youtube Video</a>
           </section>
           <!-- End of Project block. -->
           <section class="project-item">
-            <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
+            <img src="images/noah-boyer-T5EqgCYyJGU-unsplash.jpg" alt="description of image">
             <h3>Self Leveling/Balancing Robot</h3>
-            <p>Mechatronics Project. A rover that will autamatically balance its roll and pitch axis</p>
+            <p>Mechatronics Project. A rover that will automatically balance its roll and pitch axis</p>
             <a class = "btn" href="#" target="_blank">View project</a>
           </section>
           <!-- End of Project block. -->
           <section class="project-item">
-            <img src="images/annie-spratt-unsplash.jpg" alt="description of image">
+            <img src="images/arnold-francisca-FBNxmwEVpAc-unsplash.jpg" alt="description of image">
             <h3>6DOF Arm Robot Simulation</h3>
             <p>Robotics Project. 6DOF Arm Robot simulator that has three features, Joint Space, Task Space and Manual Control</p>
             <a class = "btn" href="https://github.com/fafadlian/6DOFSimulation" target="_blank">View project</a>
@@ -62,7 +62,7 @@
       <section class = work-experience>
         <div  class="content-wrap item-details  divider">
           <h2>Work Experience</h2>
-          <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
+          <p>My Experiences are mostly code-oriented even if i am not a programmer</p>
 
           <!-- Copy this whole <section> block to add more jobs. -->
           <section class="job-item">
@@ -72,7 +72,7 @@
               <p>October 2019 - Present</p>
             </div>
             <div class="job-summary">
-              <p>Job summary goes here. Add as many paragraphs as you need.</p>
+              <p>Perform 4G Capacity Monitoring, RedSite Prediction and Automate Team's tasks<br> Created three programs that can automate task, 4G Capacity Monitoring, 4G Re-Engineering, 4G Solution table <br> Created tableau dashboard for RedSite monitoring. <br> Involved in the development of RedSite Forecasting/Prediction that utilize machine learning algorithms in python</p>
             </div>
             <!-- <div class="job-optional">
               <p>Optional list:</p>
@@ -91,7 +91,7 @@
               <p>June 2018 - August 2018</p>
             </div>
             <div class="job-summary">
-              <p>Job summary goes here. Add as many paragraphs as you need.</p>
+              <p>Created MyArm 3DOF Arm Robot, perform forum monitoring, and devices configuration and calibration.</p>
             </div>
             <!-- <div class="job-optional">
               <p>Optional list:</p>
@@ -110,7 +110,7 @@
               <p>January 2018 - December 2018</p>
             </div>
             <div class="job-summary">
-              <p>Job summary goes here. Add as many paragraphs as you need.</p>
+              <p>Head of RnD division. Perform research for Lab's device and scoring materials for participant.</p>
             </div>
             <!-- <div class="job-optional">
               <p>Optional list:</p>
@@ -154,8 +154,8 @@
 
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul class="contact-list">
-            <li><a href="fathifadlian01@gmail.com">fathi's email</a></li>
-            <li><a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a></li>
+            <!-- <li><a href="fathifadlian01@gmail.com">fathi's email</a></li> -->
+            <li><a href="http://github.com/fafadlian" target="_blank">GitHub</a></li>
             <!-- <li><a href="#" target="_blank">Twitter</a></li> -->
             <li><a href="https://www.linkedin.com/in/muhammad-fathi-fadlian-195814166/" target="_blank">LinkedIn</a></li>
             <!-- <li><a href="#" target="_blank">Facebook</a></li> -->
