--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fadlian's Profile</title>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Oxanium:wght@400;600&display=swap" rel="stylesheet"" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
