Add "View Site" for project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h3>Movie Genre Prediction</h3>
             <p>It's a webpage that can predict the genre of a movie based on the plot text. Utilize php and html for the web and python for the natural language processing part. </p>
             <a class = "btn" href="https://github.com/fafadlian/Movie-Genre" target="_blank">View Project</a>
+            <a class = "btn" href="https://movie-genre-predictor.netlify.app/" target="_blank">View Site</a>
           </section>
           <!-- End of Project block. -->
           <section class="project-item">
