--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <h1>Fathi Fadlian</h1>
           <h2>Robotics, AI and Control System Enthusiast.</h2>
 
-          <p>Electrical Engineering bachelor fresh graduate in control lab with Artificial Neural Network final project. Experienced in team collaboration for UI Robotics Team in several tournaments. Captivated in hardware programming, machine learning, and electrical circuit design. </p>
-          <p>Currently working for ZTE Indonesia as Wireless Network Planner, though still doing some research about Machine Learning, Robotics and sometimes code web design for fun !</p>
+          <p>Electrical Engineering bachelor fresh graduate in control lab with Artificial Neural Network final project. Experienced in team collaboration for UI Robotics Team in several tournaments. Captivated in hardware programming, machine learning, and electrical circuit design. Currently working for ZTE Indonesia as Wireless Network Planner, though still doing some research about Machine Learning, Robotics and sometimes code web design for fun !</p>
+          <a href = "resume.pdf"> See my resume </a>
         </div>
       </header>
 
