Add devider from h2 and first project item

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class = "projects">
         <div  class="content-wrap divider">
-          <h2>Featured Projects</h2>
-          <p>View selected projects below. More information can be found at <a href="http://github.com/fafadlian">fathi's github</a>.</p>
+          <section>
+            <h2>Featured Projects</h2>
+            <p>View selected projects below. More information can be found at <a href="http://github.com/fafadlian">fathi's github</a>.</p>
+          </section>
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
